# dj_docker_ecom_model

./: .gitignore  Dockerfile  backup_db.sqlite3  build.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: dashboard.html  manage-shipping.html  my-login.html
account/templates/account/password/: password-reset-form.html
account/templates/account/registration/: email-verification-failed.html  email-verification-success.html  register.html
account/templatetags/: rewards_tags.py
cart/: cart.py  urls.py  views.py
cart/templates/cart/: cart-summary.html
ecom_model/: asgi.py  settings.py  urls.py  wsgi.py
payment/: admin.py  forms.py  models.py  urls.py  views.py
payment/migrations/: 0002_refundrequest_refunditem.py
payment/templates/payment/: checkout.html
static/css/: arcade.css
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0003_topic_category_topic.py  0004_product_upc_code.py
store/templates/store/: base.html  nav.html  product-info.html  store.html
sync/: __init__.py  apps.py  router.py  signals.py
sync/management/commands/: sync_to_backup.py
