[project]
name = "ecom-model"
version = "0.1.0"
description = "This is a mockup of an e-commerce store"
authors = [
    {name = "Mustafa Prodhan",email = "mufassagit@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
